--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,12 +4,13 @@
     "plugin:import/errors",
     "plugin:react/recommended",
     "plugin:jsx-a11y/recommended",
+    "plugin:react-hooks/recommended",
     "prettier"],
     "rules":{
         "react/prop-types":0,
         "react/react-in-jsx-scope":0
     },
-    "plugins": ["react","import","jsx-a11y"],
+    "plugins": ["react","import","jsx-a11y","react-hooks"],
     "parserOptions": {
         "ecmaVersion": 2022,
         "sourceType": "module",
